chore: blog page redesigned

--- a/data/blog/push-to-protected-branch-gh-action.mdx
+++ b/data/blog/push-to-protected-branch-gh-action.mdx
@@ -6,7 +6,7 @@ image: https://images.unsplash.com/photo-1614064641938-3bbee52942c7?ixlib=rb-1.2
 tags: ['github-actions', 'ci']
 ---
 
-While working to improve the CI workflows in Chakra UI, we wanted to create a Github action that updates the changelog anytime we release a new version. The github action looked like:
+While working to improve the CI workflows in Chakra UI, we wanted to create a Github action that updates the changelog anytime we release a new version. The github action looked like this:
 
 ```yaml
 jobs:
